--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
   <script>
     // 👉 Replace this with your actual published CSV URL from Google Sheets
-    const SHEET_CSV_URL = "https://aac-tech.feishu.cn/drive/folder/RyJ7fTBFyls35PdQWfqcp8znnUb/Glossary of Technical Terms (技术术语中英文对照表).csv";
+    const SHEET_CSV_URL = "https://github.com/sunscale/glossary/blob/main/Glossary%20of%20Technical%20Terms%20(%E6%8A%80%E6%9C%AF%E6%9C%AF%E8%AF%AD%E4%B8%AD%E8%8B%B1%E6%96%87%E5%AF%B9%E7%85%A7%E8%A1%A8)%20-%20Sheet1.csv";
 
     let entries = [];
 
@@ -182,4 +182,5 @@
     window.addEventListener("DOMContentLoaded", loadData);
   </script>
 </body>
+
 </html>
